trying to fix overlapping on phone

--- a/main.css
+++ b/main.css
@@ -166,7 +166,7 @@ textarea {
   text-align: left;
   background-color: hsl(0, 0%, 12%);
   width: 600px;
-  height: 450px;
+  height: 400px;
   margin: 20px;
   padding: 0px 20px;
   border: 1px solid black;
@@ -177,7 +177,7 @@ textarea {
   background-color: hsl(0, 0%, 7%);
   border: 1px solid black;
   width: 100%;
-  height: 30%;
+  height: 25%;
   overflow: auto;
   resize: none;
 }
